# compositor

./: .gitreview  COPYING  meson.build  meson_options.txt
clients/: meson.build  screenshooter.c
doc/: README.md
protocol/: agl-screenshooter.xml  agl-shell-desktop.xml  agl-shell.xml
shared/: file-util.c  file-util.h  option-parser.c  os-compatibility.c  os-compatibility.h
src/: compositor.c  desktop.c  input.c  ivi-compositor.h  layout.c  main.c  policy-default.c  policy-deny.c  policy-rba.c  policy.c  policy.h  rba_adapter.cpp  rba_adapter.h  screenshooter.c  shell.c  systemd-notify.c
